login issue solving